<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foodrific</string>
    <string name="action_settings">Settings</string>
    <string name="UsernameHint">Email</string>
    <string name="PasswordHint">Password</string>
    <string name="LoginButton">Entrar</string>
    <string name="RegisterButton">Registar</string>
    <string name="LogoImageDesc">Foodrific logo</string>
    <string name="LoginWithGoogle">Entar com Google</string>
    <string name="title_activity_feed">O meu Feed</string>
    <string name="hello_world">ola mundo!</string>
    <string name="title_activity_web_view">Web</string>

</resources>
