<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity" 
    android:background="@drawable/login_background"
    >

    <ImageView
        android:id="@+id/logoImageView"
        style="@style/LogoStyle"
        android:src="@drawable/logo_white"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/LogoImageDesc" />

    <EditText
        android:id="@+id/UsernameEditText"
        style="@style/EditTextStyle"
        android:ems="10"
        android:hint="@string/UsernameHint"
        android:inputType="textEmailAddress" >
        
    </EditText>

    <EditText
        android:id="@+id/PasswordEditText"
        android:hint="@string/PasswordHint"
        style="@style/EditTextStyle"
        android:ems="10"       
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="35dp"
        android:id="@+id/LoginButton"
        style="@style/LoginButtons"
        android:text="@string/LoginButton"
        android:background="#d93600"
        android:onClick="login"
        />
    
    <Button
        android:id="@+id/RegisterButton"
        style="@style/LoginButtons"
        android:background="#4078d5"
        android:text="@string/RegisterButton" />    
</LinearLayout>
